# Ulfr-Engine

./: .gitignore  CMakeLists.txt  README.md  build-all.bat  imgui.ini  main.cpp
engine/: build.bat
engine/src/: entry.h  game_types.h
engine/src/core/: application.cpp  application.h  asserts.h  event.cpp  event.h  fmemory.cpp  fmemory.h  logger.cpp  logger.h
engine/src/platform/: platform.h  platform_linux.cpp
engine/src/renderer/: renderer_frontend.cpp  renderer_frontend.h  renderer_types.h
engine/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_types.inl
include/editor/: Editor.h  LogPanel.h
include/engine/: Engine.h  InputHandler.h  Logger.h  Renderer.h
include/game/: Map.h  Player.h
src/: README.md  main.cpp
src/editor/: Editor.cpp  LogPanel.cpp
src/engine/: Camera.cpp  Engine.cpp  Engine.h  InputHandler.cpp  Logger.cpp  Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h
src/game/: Map.cpp  Player.cpp
testbed/: build.bat  build.sh
testbed/src/: entry.cpp  game.cpp  game.h  main.cpp
